@@ -66,6 +66,16 @@
           <artifactId>maven-deploy-plugin</artifactId>
           <version>2.8.2</version>
         </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.22.2</version>
+            <configuration>
+                <argLine>
+                    --add-opens java.base/java.lang=ALL-UNNAMED
+                </argLine>
+            </configuration>
+        </plugin>
       </plugins>
     </pluginManagement>
   </build>
